[package]
name = "lsm6ds33"
version = "0.1.0"
edition = "2018"
description="A platform agnostic driver for the LSM6DS33 6-DoF Accel + Gyro IMU"
authors = ["Natesh Narain <nnaraindev@gmail.com>"]
repository="https://github.com/nnarain/lsm6ds33"
keywords=["embedded-hal-driver", "imu", "accelerometer", "gyroscope", "sensor"]
categories = ["embedded", "hardware-support", "no-std"]
readme="README.md"
license-file="LICENSE"

[dependencies]
embedded-hal = "0.2"
